--- a/WingMate_iOS/Application/Info.plist
+++ b/WingMate_iOS/Application/Info.plist
@@ -55,5 +55,7 @@
 	<false/>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses location to find the distance between user and its potential match.</string>
 </dict>
 </plist>
